user-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: user
  ports:
    - port: 4000
      targetPort: 3000
