user-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-nodeport-service
spec:
  type: NodePort
  selector:
    component: user
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
